[tool.poetry]
name = "y-torch"
version = "0.1.0"
description = "test env for computer vision ML(ops)"
authors = ["cybertreiber"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pydantic = "*"
torch = "^1.13"
nvidia-cudnn-cu11 = "~8.5.0"
nvidia-cuda-nvrtc-cu11 = "~11.7"
nvidia-cuda-runtime-cu11 = "~11.7"

[tool.poetry.scripts]
y-torch = 'y_torch:main'

[tool.poetry.dev-dependencies]
python-lsp-server = "*"
python-lsp-ruff = "*"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
