[tool.poetry]
name = "y-torch"
version = "0.1.0"
description = "test env for computer vision ML(ops)"
authors = ["cybertreiber"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pydantic = "*"

[tool.poetry.dependencies.torch]
version = "2.0.0.dev20230101+cpu"
allow-prereleases = true
source = "torch"

[tool.poetry.scripts]
y-torch = 'y_torch:main'

[tool.poetry.dev-dependencies]
python-lsp-server = "*"
python-lsp-ruff = "*"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/nightly/cpu"
default = false
secondary = true
